Rask styling, level parsing sjer automatisk, og knapper fyrer en funksjon

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,5 +6,47 @@
         padding: 10px 20px;
         border: 1px solid $black;
         border-radius: 10px;
+        background-color: #fff;
+
+        &.red {
+            background-color: red;
+            color: white;
+        }
+
+        &.yellow {
+            background-color: yellow;
+            color: white;
+        }
+
+        &.blue {
+            background-color: blue;
+            color: white;
+        }
+
+        &.green {
+            background-color: green;
+            color: white;
+        }
+        
+        &.black {
+            background-color: black;
+            color: white;
+        }
+
+        &.white {
+            background-color: white;
+            color: black;
+        }
     }
+
+    &__icon {
+
+    }
+
+    &__text {
+
+    }
+
+    
+
 }
