--- a/sass/components/_main-stage.scss
+++ b/sass/components/_main-stage.scss
@@ -1,6 +1,8 @@
 .main-stage {
     &__header {
         text-align: center;
+        background-color: rgba(255,255,255,0.3);
+        padding: 2rem;
     }
     &__left {
 
@@ -12,6 +14,23 @@
 
     }
     &__footer {
-        
+
+    }
+
+    &__drag-and-drop {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+
+        background-color: rgba(0,0,0,0.5);
+        color: #fff;
+
+        visibility: hidden;
     }
 }
