La til snackbar og modal + basic styling

--- a/sass/components/import.scss
+++ b/sass/components/import.scss
@@ -2,3 +2,6 @@
 @import '_button-list.scss';
 @import '_button.scss';
 @import '_main-stage.scss';
+@import '_modal.scss';
+@import '_keyframes.scss';
+@import '_snackbar.scss';
