css for klokken vår

--- a/sass/components/_clock.scss
+++ b/sass/components/_clock.scss
@@ -1,7 +1,57 @@
-
 .clock {
     &__container {
         display: flex;
         background-color: $green;
+    }
+    &__spinner {
+        &--1 {
+            font-size: 10px;
+            margin: 50px auto;
+            text-indent: -9999em;
+            width: 11em;
+            height: 11em;
+            border-radius: 50%;
+            background: #ffffff;
+            background: linear-gradient(to right, #ffffff 10%, rgba(255, 255, 255, 0) 42%);
+            position: relative;
+            animation: round 1.4s infinite linear;
+            transform: translateZ(0);
+            &:before {
+                width: 50%;
+                height: 50%;
+                background: #ffffff;
+                border-radius: 100% 0 0 0;
+                position: absolute;
+                top: 0;
+                left: 0;
+                content: '';
+            }
+            &:after {
+                background: #0dc5c1;
+                width: 75%;
+                height: 75%;
+                border-radius: 50%;
+                content: '';
+                margin: auto;
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+            }
+        }
+        &--2 {
+            color: #ffffff;
+            font-size: 90px;
+            text-indent: -9999em;
+            overflow: hidden;
+            width: 1em;
+            height: 1em;
+            border-radius: 50%;
+            margin: 72px auto;
+            position: relative;
+            transform: translateZ(0);
+            animation: spinner2 1.7s infinite ease, round 1.7s infinite ease;
+        }
     }
 }
