--- a/sass/components/_main-stage.scss
+++ b/sass/components/_main-stage.scss
@@ -1,36 +1,32 @@
 .main-stage {
     &__header {
         text-align: center;
-        background-color: rgba(255,255,255,0.3);
+        background-color: rgba(255, 255, 255, 0.3);
         padding: 2rem;
+        word-wrap: break-word;
+        font-size: 3rem;
     }
-    &__left {
-
-    }
-    &__right {
-
-    }
-    &__hero {
-
-    }
-    &__footer {
-
-    }
-
+    &__left {}
+    &__right {}
+    &__hero {}
+    &__footer {}
     &__drag-and-drop {
         display: flex;
         justify-content: center;
         align-items: center;
-
         position: fixed;
         left: 0;
         right: 0;
         bottom: 0;
         top: 0;
-
-        background-color: rgba(0,0,0,0.5);
+        background-color: rgba(0, 0, 0, 0.5);
         color: #fff;
-
         visibility: hidden;
+    }
+    &__score {
+        &--counter {
+            font-weight: bold;
+            text-decoration: underline;
+        }
     }
 }
