Bugfixed local storage loading and button display

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,6 @@
 .button {
     &__container {
-        display: flex;
+        display: none;
         justify-content: space-between;
         margin: 5px;
         padding: 10px 20px;
